crates/plotnik-lib/tests/02-parser/recovery_validation/bare_missing_keyword.txt
MISSING
------------------ DIAGNOSTICS -------------------
error: `ERROR` and `MISSING` must be parenthesized
 --> query.ptk:1:1
  |
1 | MISSING
  | ^^^^^^^
  |
help: write `(ERROR)` or `(MISSING ";")`
